# apigate

./: .gitignore  README.md  nohup.sh  package-lock.json  package.json  pm2.sh
client/: .babelrc  README.md  dev.sh  package-lock.json  package.json
client/config/: preact.config.js  template.html
client/src/: index.js  manifest.json  sw.js  sw_register.js
examples/japanese_eel_fig1_skill_cartopy_gebco_cbar_test/: plot_from_template.py  pyproject.toml  validation.md
examples/japanese_eel_fig1_skill_cartopy_template_test/: plot_from_template.py  validation.md
examples/japanese_eel_fig1_skill_cartopy_test/: README.md  plot_japanese_eel_fig1_skill_cartopy.py
examples/japanese_eel_fig1_skill_only_check/: README.md  plot_japanese_eel_fig1_skill_only.py  validation.md
examples/japanese_eel_fig1_skill_test/: README.md  plot_japanese_eel_fig1_skill_test.py  pyproject.toml  skill_validation_review.md
examples/kuroshio_large_meander_fig1/: README.md  kuroshio_large_meander_fig1_summary.md  plot_large_meander_fig1.py  pyproject.toml
examples/kuroshio_skill_prompt_blind_test/: README.md  plot_kuroshio_from_prompt.py  review.md
examples/kurshio_current/: README.md  pyproject.toml
examples/kurshio_current_v2/: README.md  compare_topo_resolution.py  gebco_feasibility.py  gebco_feasibility_report.json  plot_kuroshio_current_v2.py  plot_kuroshio_current_v2_monsoon.py  pyproject.toml
examples/research_plan/: IMPLEMENTATION_NOTES.md  README.md  case_screening.md  generate_project_report_pdf.py  kbc_analog_proxy.csv  kbc_analog_proxy.json  kbc_analog_summary.md  make_workflow_slide_figure.py  plan.md  plot_kbc_analog.py  project_report.md  pyproject.toml  review.md  source_manifest.md  spec.md  subagent_briefing.md
examples/sae_ctd_sadcp_analog/: README.md  plot_sae_analog.py  pyproject.toml  sae_analog_summary.md
server/: app.js  package-lock.json  package.json  pm2.sh  pnpm-lock.yaml
server/plugins/: sessionJwt.js
server/routes/: frontend.js
(+48 files in other folders)
